This commit was manufactured by cvs2svn to create tag 'PRE_NEW_MARKUP_INHERITANCE'.
git-svn-id: https://svn.apache.org/repos/asf/incubator/wicket/tags/PRE_NEW_MARKUP_INHERITANCE@457359 13f79535-47bb-0310-9956-ffa450edef68