@@ -44,14 +44,37 @@ public final class ConvertersTest extends TestCase
 		super(name);
 	}
 
+	/**
+	 * Test generalized conversion
+	 */
 	public void testConversion()
 	{
         final IConverter converter = new ConverterFactory().newConverter(Locale.US);
         assertEquals(new Long(7), converter.convert(new Integer(7), Long.class));
         assertEquals("7", converter.convert(new Integer(7), String.class));
         assertEquals("7.1", converter.convert(new Double(7.1), String.class));
-        
-        // TODO someone could add a whole lot more tests here, including DUTCH_LOCALE tests - JL
+        converter.setLocale(DUTCH_LOCALE);
+        assertEquals("7,1", converter.convert(new Double(7.1), String.class));
+		
+		Calendar cal = Calendar.getInstance(DUTCH_LOCALE);
+		cal.clear();
+		cal.set(2002, Calendar.OCTOBER, 24);
+		Date date = cal.getTime();
+
+		assertEquals(date, converter.convert("24-10-02", Date.class));
+		assertEquals("24-10-02", converter.convert(date, String.class));
+
+		// empty strings should return null, NOT throw NPEs
+		assertNull(converter.convert("", Double.class));
+		assertNull(converter.convert("", Long.class));
+		assertNull(converter.convert("", Float.class));
+		assertNull(converter.convert("", Integer.class));
+		assertNull(converter.convert("", Byte.class));
+		assertNull(converter.convert("", Character.class));
+		assertNull(converter.convert("", Date.class));
+		assertNull(converter.convert("", Short.class));
+		assertEquals(Boolean.FALSE, converter.convert("", Boolean.class));
+		assertNotNull(converter.convert("", String.class));
 	}
 
 	/**
@@ -59,15 +82,15 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testBooleanConversions()
 	{
-		assertEquals("true", new StringConverter().convert(Boolean.TRUE));
-		assertEquals("false", new StringConverter().convert(Boolean.FALSE));
-		assertEquals(Boolean.TRUE, new BooleanConverter().convert(Boolean.TRUE));
-		assertEquals(Boolean.FALSE, new BooleanConverter().convert(Boolean.FALSE));
-		assertEquals(Boolean.TRUE, new BooleanConverter().convert("true"));
-		assertEquals(Boolean.FALSE, new BooleanConverter().convert("false"));
+		assertEquals("true", new StringConverter().convert(Boolean.TRUE, Locale.getDefault()));
+		assertEquals("false", new StringConverter().convert(Boolean.FALSE, Locale.getDefault()));
+		assertEquals(Boolean.TRUE, new BooleanConverter().convert(Boolean.TRUE, Locale.getDefault()));
+		assertEquals(Boolean.FALSE, new BooleanConverter().convert(Boolean.FALSE, Locale.getDefault()));
+		assertEquals(Boolean.TRUE, new BooleanConverter().convert("true", Locale.getDefault()));
+		assertEquals(Boolean.FALSE, new BooleanConverter().convert("false", Locale.getDefault()));
 		try
 		{
-			new BooleanConverter().convert("whatever");
+			new BooleanConverter().convert("whatever", Locale.getDefault());
 			fail("Conversion should have thrown an exception");
 		}
 		catch (ConversionException e)
@@ -81,14 +104,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testByteConversions()
 	{
-		ByteConverter converter = new ByteConverter(Locale.US);
-		assertEquals(Locale.US, converter.getLocale());
-		assertEquals(new Byte((byte)10), converter.convert(Byte.valueOf("10")));
-		assertEquals(new Byte((byte)10), converter.convert("10"));
-		assertEquals("10", new StringConverter().convert(new Byte((byte)10)));
+		ByteConverter converter = new ByteConverter();
+		assertEquals(new Byte((byte)10), converter.convert(Byte.valueOf("10"),Locale.US));
+		assertEquals(new Byte((byte)10), converter.convert("10",Locale.US));
+		assertEquals("10", new StringConverter().convert(new Byte((byte)10),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -97,7 +119,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("10whatever");
+            converter.convert("10whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -106,7 +128,7 @@ public final class ConvertersTest extends TestCase
         }
 		try
 		{
-			converter.convert("256");
+			converter.convert("256",Locale.US);
 			fail("Conversion should have thrown an exception");
 		}
 		catch (ConversionException e)
@@ -120,14 +142,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testDoubleConversions()
 	{
-		DoubleConverter converter = new DoubleConverter(Locale.US);
-		assertEquals(Locale.US, converter.getLocale());
-		assertEquals(new Double(1.1), converter.convert(new Double(1.1)));
-		assertEquals(new Double(1.1), converter.convert("1.1"));
-		assertEquals("1.1", new StringConverter(Locale.US).convert(new Double(1.1)));
+		DoubleConverter converter = new DoubleConverter();
+		assertEquals(new Double(1.1), converter.convert(new Double(1.1),Locale.US));
+		assertEquals(new Double(1.1), converter.convert("1.1",Locale.US));
+		assertEquals("1.1", new StringConverter().convert(new Double(1.1),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -136,7 +157,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("1.1whatever");
+            converter.convert("1.1whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -150,13 +171,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testFloatConversions()
 	{
-		FloatConverter converter = new FloatConverter(Locale.US);
-		assertEquals(new Float(1.1), converter.convert(new Float(1.1)));
-		assertEquals(new Float(1.1), converter.convert("1.1"));
-		assertEquals("1.1", new StringConverter(Locale.US).convert(new Float(1.1)));
+		FloatConverter converter = new FloatConverter();
+		assertEquals(new Float(1.1), converter.convert(new Float(1.1),Locale.US));
+		assertEquals(new Float(1.1), converter.convert("1.1",Locale.US));
+		assertEquals("1.1", new StringConverter().convert(new Float(1.1),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -165,7 +186,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("1.1whatever");
+            converter.convert("1.1whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -179,14 +200,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testIntegerConversions()
 	{
-		IntegerConverter converter = new IntegerConverter(Locale.US);
-		assertEquals(Locale.US, converter.getLocale());
-		assertEquals(new Integer(10), converter.convert(Integer.valueOf("10")));
-		assertEquals(new Integer(10), converter.convert("10"));
-		assertEquals("10", new StringConverter(Locale.US).convert(new Integer(10)));
+		IntegerConverter converter = new IntegerConverter();
+		assertEquals(new Integer(10), converter.convert(Integer.valueOf("10"),Locale.US));
+		assertEquals(new Integer(10), converter.convert("10",Locale.US));
+		assertEquals("10", new StringConverter().convert(new Integer(10),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -195,7 +215,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("10whatever");
+            converter.convert("10whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -204,7 +224,7 @@ public final class ConvertersTest extends TestCase
         }
 		try
 		{
-			converter.convert("" + ((long)Integer.MAX_VALUE + 1));
+			converter.convert("" + ((long)Integer.MAX_VALUE + 1),Locale.US);
 			fail("Conversion should have thrown an exception");
 		}
 		catch (ConversionException e)
@@ -218,14 +238,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testLongConversions()
 	{
-		LongConverter converter = new LongConverter(Locale.US);
-		assertEquals(Locale.US, converter.getLocale());
-		assertEquals(new Long(10), converter.convert(Long.valueOf("10")));
-		assertEquals(new Long(10), converter.convert("10"));
-		assertEquals("10", new StringConverter(Locale.US).convert(new Long(10)));
+		LongConverter converter = new LongConverter();
+		assertEquals(new Long(10), converter.convert(Long.valueOf("10"),Locale.US));
+		assertEquals(new Long(10), converter.convert("10",Locale.US));
+		assertEquals("10", new StringConverter().convert(new Long(10),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -234,7 +253,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("10whatever");
+            converter.convert("10whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -243,7 +262,7 @@ public final class ConvertersTest extends TestCase
         }
 		try
 		{
-			new LongConverter().convert("" + Long.MAX_VALUE + "0");
+			new LongConverter().convert("" + Long.MAX_VALUE + "0",Locale.US);
 			fail("Conversion should have thrown an exception");
 		}
 		catch (ConversionException e)
@@ -257,14 +276,13 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testShortConversions()
 	{
-		ShortConverter converter = new ShortConverter(Locale.US);
-		assertEquals(Locale.US, converter.getLocale());
-		assertEquals(new Short((short)10), converter.convert(Short.valueOf("10")));
-		assertEquals(new Short((short)10), converter.convert("10"));
-		assertEquals("10", new StringConverter(Locale.US).convert(new Short((short)10)));
+		ShortConverter converter = new ShortConverter();
+		assertEquals(new Short((short)10), converter.convert(Short.valueOf("10"),Locale.US));
+		assertEquals(new Short((short)10), converter.convert("10",Locale.US));
+		assertEquals("10", new StringConverter().convert(new Short((short)10),Locale.US));
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -273,7 +291,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("10whatever");
+            converter.convert("10whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -282,7 +300,7 @@ public final class ConvertersTest extends TestCase
         }
 		try
 		{
-			converter.convert("" + (Short.MAX_VALUE + 1));
+			converter.convert("" + (Short.MAX_VALUE + 1),Locale.US);
 			fail("Conversion should have thrown an exception");
 		}
 		catch (ConversionException e)
@@ -296,25 +314,23 @@ public final class ConvertersTest extends TestCase
 	 */
 	public void testDateConverter()
 	{
-		DateConverter converter = new DateConverter(DUTCH_LOCALE);
-		StringConverter stringConverter = new StringConverter(DUTCH_LOCALE);
+		DateConverter converter = new DateConverter();
+		StringConverter stringConverter = new StringConverter();
 
 		Calendar cal = Calendar.getInstance(DUTCH_LOCALE);
 		cal.clear();
 		cal.set(2002, Calendar.OCTOBER, 24);
 		Date date = cal.getTime();
 
-		assertEquals("24-10-02", stringConverter.convert(date));
-		assertEquals(date, converter.convert("24-10-02"));
+		assertEquals("24-10-02", stringConverter.convert(date,DUTCH_LOCALE));
+		assertEquals(date, converter.convert("24-10-02",DUTCH_LOCALE));
 
-		converter.setLocale(Locale.US);
-		stringConverter.setLocale(Locale.US);
-		assertEquals("10/24/02", stringConverter.convert(date));
-		assertEquals(date, converter.convert("10/24/02"));
+		assertEquals("10/24/02", stringConverter.convert(date,Locale.US));
+		assertEquals(date, converter.convert("10/24/02",Locale.US));
 
         try
         {
-            converter.convert("whatever");
+            converter.convert("whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
@@ -323,7 +339,7 @@ public final class ConvertersTest extends TestCase
         }
         try
         {
-            converter.convert("10/24/02whatever");
+            converter.convert("10/24/02whatever",Locale.US);
             fail("Conversion should have thrown an exception");
         }
         catch (ConversionException e)
